--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -31,14 +31,13 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
       - name: Set up Node
-        uses: actions/setup-node@v4
+        uses: pnpm/action-setup
         with:
-          node-version: lts/*
-          cache: 'npm'
+          version: 10
       - name: Install dependencies
-        run: npm ci
+        run: pnpm ci
       - name: Build
-        run: npm run build
+        run: pnpm run build
       - name: Setup Pages
         uses: actions/configure-pages@v5
       - name: Upload artifact
