--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -31,7 +31,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
       - name: Set up Node
-        uses: pnpm/action-setup
+        uses: pnpm/action-setup@v4
         with:
           version: 10
       - name: Install dependencies
